# flibusta-searcher

./: README.md  main.py  pyproject.toml
src/flibusta_searcher/: cli.py  client.py  models.py
